@@ -1,0 +1,7 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    i18n_domain="plone.event">
+
+    <adapter factory=".adapters.EventAccessor" />
+
+</configure>
